images "I" capital letter

--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
       </div>
       <section class="row-contact">
         <article class="col-imgcont">
-          <img src="images/concubinelane.jpg" alt="concubinelane"  width="500" height="700">
+          <img src="Images/concubinelane.jpg" alt="concubinelane"  width="500" height="700">
         </article>
         <article class="col-cont">
           <p align="center">Any queries? Leave us a message through:</p>
