add link webmaster

--- a/news.html
+++ b/news.html
@@ -119,6 +119,7 @@
   </div>
 </main>
 <footer class="footer">
+  <h3><a target="_blank" href="webmaster.html">WEBMASTER</a></h3>
   <h3>Follow us on:</h3>
   <a target="_blank" href="https://www.instagram.com/anliatravel/"><i class="fa fa-instagram"></i></a>
   <a target="_blank" href="https://www.pinterest.com/anliatravel/"><i class="fa fa-pinterest"></i></a>
