update title of the page

--- a/accomodation.html
+++ b/accomodation.html
@@ -25,7 +25,10 @@
       </nav>
     </header>
     <main>
-      <div style="text-align: center">
+        <div class="title">
+        <h2>HISTORY OF IPOH OLD TOWN</h2>
+        </div>
+        <div style="text-align: center">
         <h2>SHOPPING CENTER</h2> </div>
     <div class="image">
       <a target="_blank" href="Images/shopping center.jpg" aligncontent="center">
