UPDATE TITLE TO ACCOMODATION

--- a/accomodation.html
+++ b/accomodation.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="title">
-        <h2>HISTORY OF IPOH OLD TOWN</h2>
+        <h2>ACCOMODATION OF IPOH OLD TOWN</h2>
         </div>
         <div style="text-align: center">
         <h2>SHOPPING CENTER</h2> </div>
